--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       overflow: hidden !important;
     }
 
-    /* ===========================
-       FUNDO + MARCA D’ÁGUA
-       =========================== */
+    /* FUNDO + MARCA D’ÁGUA */
     body{
       font-family: Arial, sans-serif;
       color:#fff;
@@ -72,16 +70,13 @@
       gap: 10px;
     }
 
-    /* ===========================
-       HEADER
-       =========================== */
+    /* HEADER */
     header{
       flex:0 0 auto;
       display:flex;
       align-items:center;
       justify-content:space-between;
       gap:10px;
-      padding-bottom: 0px;
     }
 
     .sysOnly{
@@ -112,7 +107,7 @@
       box-shadow: 0 10px 20px rgba(0,0,0,.14);
     }
 
-    /* ✅ DEV CARD sem “efeito fantasma” */
+    /* DEV CARD */
     .devCard{
       display:flex;
       flex-direction:column;
@@ -142,26 +137,19 @@
       text-transform:uppercase;
     }
 
-    /* ===========================
-       ✅ CARD MAIS PARA O MEIO DA TELA
-       =========================== */
+    /* CARD CENTRAL */
     main{
       flex: 1 1 auto;
       display:flex;
       align-items:flex-start;
       justify-content:center;
       min-height: 0;
-
-      /* ✅ isso baixa o card mais para o meio */
-      padding-top: 48px;
+      padding-top: 46px;
     }
 
-    /* ===========================
-       CARD PRINCIPAL
-       =========================== */
     .glass{
       width: min(1180px, 100%);
-      height: 520px;  /* ✅ maior para caber tudo sem rolagem */
+      height: 520px;
       border-radius: 26px;
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, rgba(255,255,255,.13), rgba(255,255,255,.06));
@@ -191,7 +179,6 @@
       text-shadow: 0 10px 24px rgba(0,0,0,.30);
     }
 
-    /* guia */
     .guideLine{
       padding: 10px 12px;
       border-radius: 16px;
@@ -222,39 +209,33 @@
       color: rgba(255,255,255,.75);
     }
 
-    /* ===========================
-       ✅ TEXTAREA GRANDE SEM SCROLL
-       =========================== */
+    /* ✅ TEXTAREA FIXO (SEM FLEX / SEM CRESCER) */
     textarea{
       width:100%;
-      height: 285px;            /* ✅ grande (como no PDF) */
-      min-height: 285px;
-      max-height: 285px;
+      height: 280px;            /* ✅ FIXO (AJUSTE AQUI SE QUISER) */
+      min-height: 280px;
+      max-height: 280px;
 
       resize:none;
       border-radius: 18px;
       border: 1px solid rgba(255,255,255,.18);
-
       background: rgba(0,0,0,.14);
       box-shadow: 0 12px 22px rgba(0,0,0,.14);
-
       padding: 14px;
       outline:none;
       font-size: 15px;
       color:#fff;
       line-height: 1.35;
 
-      /* ✅ some com a rolagem */
-      overflow: hidden;
+      overflow: hidden; /* ✅ SEM BARRA DE ROLAGEM */
+      flex: 0 0 auto;   /* ✅ impede o flex de esticar */
     }
     textarea::placeholder{ color: rgba(255,255,255,.64); }
 
-    /* ===========================
-       ✅ BOTÃO MENOR E NO CENTRO
-       =========================== */
+    /* BOTÃO CENTRAL */
     .btn{
-      align-self: center; /* ✅ centraliza */
-      width: min(680px, 92%); /* ✅ não ocupa tudo */
+      align-self: center;
+      width: min(680px, 92%);
       border:none;
       border-radius: 18px;
       padding: 12px 16px;
@@ -263,7 +244,6 @@
       font-weight: 900;
       letter-spacing: .3px;
       color:#041b2f;
-
       background: linear-gradient(90deg, #00e09c, #1376b8);
       box-shadow: 0 16px 26px rgba(0,0,0,.18);
       transition: transform .08s ease, filter .2s ease;
@@ -271,22 +251,21 @@
     .btn:hover{ filter: brightness(1.03); }
     .btn:active{ transform: translateY(1px); }
 
-    /* ===========================
-       RESPONSIVO
-       =========================== */
+    /* RESPONSIVO */
     @media (max-width: 980px){
       header{ flex-direction:column; align-items:flex-start; gap:8px; }
       .devCard{ align-items:flex-start; }
-      main{ padding-top: 26px; }
+      main{ padding-top: 22px; }
       .glass{ height: 560px; }
-      textarea{ height: 320px; min-height: 320px; max-height: 320px; overflow:auto; }
-      /* no celular precisa rolar mesmo */
+
+      /* celular precisa permitir scroll */
+      textarea{ overflow:auto; }
     }
 
     @media (max-width: 520px){
       .screen{ padding: 10px 12px; }
       .glass{ height: 620px; }
-      textarea{ height: 360px; min-height: 360px; max-height: 360px; overflow:auto; }
+      textarea{ overflow:auto; }
     }
   </style>
 </head>
