--- a/laudo.html
+++ b/laudo.html
@@ -15,17 +15,25 @@
     --bgB:#0a2a47;
     --bgC:#061a2e;
 
-    --glass:rgba(255,255,255,.10);
+    --glass:rgba(255,255,255,.12);
     --glass2:rgba(255,255,255,.06);
     --line:rgba(255,255,255,.18);
 
     --txt:#f5fbff;
     --muted:rgba(255,255,255,.78);
 
-    --shadow:0 18px 40px rgba(0,0,0,.32);
-    --shadow2:0 6px 24px rgba(0,0,0,.24);
+    --shadow:0 18px 55px rgba(0,0,0,.30);
+    --shadow2:0 10px 28px rgba(0,0,0,.22);
 
     --r22:22px;
+
+    /* ✅ NOVO: verde “identidade” */
+    --brandGreen:#00e09c;
+    --brandGreen2:#73ff9a;
+
+    /* ✅ para “folha” premium */
+    --paper: rgba(255,255,255,.92);
+    --paperBorder: rgba(255,255,255,.26);
   }
 
   *{box-sizing:border-box}
@@ -36,21 +44,37 @@
     padding:18px;
     font-family:"Segoe UI", Roboto, Arial, sans-serif;
     background: linear-gradient(90deg, var(--bgA) 0%, var(--bgB) 60%, var(--bgC) 100%);
+    position:relative;
+    overflow-x:hidden;
   }
 
-  /* ✅ Marca d’água igual ao sistema */
+  /* ✅ Marca d’água: mais visível e elegante (somente tela) */
   .watermark{
     position:fixed;
-    top:88px;
-    right:24px;
-    width:min(46vw, 720px);
-    height:calc(100vh - 110px);
+    top:70px;
+    right:-20px;
+    width:min(54vw, 860px);
+    height:calc(100vh - 90px);
     background:url("logo/logotipo.png") no-repeat right center;
     background-size:contain;
-    opacity:.07;
+    opacity:.16; /* ✅ mais visível */
     pointer-events:none;
     z-index:0;
-    filter: saturate(.9) contrast(1.05);
+    filter: saturate(1.15) contrast(1.10) brightness(1.08);
+    mix-blend-mode: screen;
+  }
+
+  /* ✅ “brilho” discreto para dar depth */
+  body::after{
+    content:"";
+    position:fixed;
+    inset:0;
+    background:
+      radial-gradient(circle at 18% 12%, rgba(255,255,255,.14), transparent 44%),
+      radial-gradient(circle at 84% 65%, rgba(115,255,154,.10), transparent 48%),
+      linear-gradient(180deg, rgba(0,0,0,.16), rgba(0,0,0,.26));
+    pointer-events:none;
+    z-index:0;
   }
 
   /* ✅ Shell premium (parecido com o principal) */
@@ -61,52 +85,83 @@
     z-index:1;
   }
 
-  /* ✅ Header estilo sistema */
+  /* ==============================
+     ✅ HEADER NOVO (SEM sesctopo)
+     ============================== */
   .hdr{
-    height:84px;
-    padding:14px 22px;
+    height:78px;
+    padding:14px 20px;
     display:flex;
     align-items:center;
     justify-content:space-between;
-    border-bottom:1px solid rgba(255,255,255,.12);
-    background: linear-gradient(180deg, rgba(0,0,0,.22), rgba(0,0,0,.00));
+
+    border:1px solid rgba(255,255,255,.16);
+    background: linear-gradient(180deg, rgba(255,255,255,.10), rgba(255,255,255,.04));
     border-radius: var(--r22);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
     box-shadow: var(--shadow2);
+    position:relative;
+    overflow:hidden;
   }
 
-  .brand{display:flex;align-items:center;gap:14px;min-width:320px;}
-  .brand img{
-    width:170px;max-height:52px;height:auto;object-fit:contain;display:block;
-    filter: drop-shadow(0 10px 16px rgba(0,0,0,.35));
+  .hdr::before{
+    content:"";
+    position:absolute;
+    inset:-2px;
+    background: radial-gradient(circle at 15% 25%, rgba(0,224,156,.16), transparent 42%);
+    pointer-events:none;
+    z-index:0;
   }
-  .brand-info{display:flex;flex-direction:column;line-height:1.05;color:var(--txt);}
-  .brand-info strong{
-    font-size:14px;letter-spacing:.20em;text-transform:uppercase;font-weight:900;
-    color: rgba(255,255,255,.92);
-  }
-  .brand-info span{margin-top:6px;font-size:12px;color:rgba(255,255,255,.68);}
 
+  .brand{
+    display:flex;
+    flex-direction:column;
+    gap:6px;
+    min-width:320px;
+    position:relative;
+    z-index:1;
+  }
+
+  .brand strong{
+    font-size:18px;
+    letter-spacing:.16em;
+    text-transform:uppercase;
+    font-weight:900;
+    color: rgba(255,255,255,.96);
+    text-shadow: 0 12px 28px rgba(0,0,0,.30);
+  }
+  .brand span{
+    font-size:12px;
+    color:rgba(255,255,255,.74);
+    letter-spacing:.06em;
+  }
+
+  /* ✅ pílula só com status (limpa o topo) */
   .pill{
     padding:9px 12px;border-radius:999px;
-    border:1px solid rgba(255,255,255,.18);
-    background: rgba(0,0,0,.18);
-    font-size:12px;color:rgba(255,255,255,.86);
-    letter-spacing:.04em;user-select:none;
-    backdrop-filter: blur(10px);
-    box-shadow: var(--shadow2);
+    border:1px solid rgba(255,255,255,.16);
+    background: rgba(6,35,63,.55);
+    font-size:12px;color:rgba(255,255,255,.90);
+    letter-spacing:.06em;user-select:none;
+    box-shadow: 0 10px 20px rgba(0,0,0,.14);
+    position:relative;
+    z-index:1;
   }
 
-  /* ✅ Card principal estilo sistema */
+  /* ==============================
+     ✅ CARD PRINCIPAL (GLASS)
+     ============================== */
   .card{
     margin-top:14px;
     border-radius: var(--r22);
-    border:1px solid var(--line);
-    background: linear-gradient(180deg, var(--glass), var(--glass2));
+    border:1px solid rgba(255,255,255,.20);
+    background: linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.05));
     box-shadow: var(--shadow);
     overflow:hidden;
   }
 
+  /* ✅ Header interno: só título */
   .card-h{
     padding:14px 16px;
     display:flex;
@@ -114,35 +169,72 @@
     justify-content:space-between;
     border-bottom:1px solid rgba(255,255,255,.10);
     color:var(--txt);
+    position:relative;
   }
+
+  .card-h::after{
+    content:"";
+    position:absolute;
+    inset:0;
+    background: linear-gradient(90deg, rgba(0,224,156,.10), rgba(0,0,0,0));
+    pointer-events:none;
+  }
+
   .card-h h1{
     margin:0;
     font-size:14px;
-    letter-spacing:.16em;
+    letter-spacing:.18em;
     text-transform:uppercase;
     font-weight:900;
+    position:relative;
+    z-index:1;
   }
 
   .card-b{
     padding:16px;
     display:grid;
-    grid-template-columns: 1fr; /* ✅ agora é 1 coluna (sem lateral) */
+    grid-template-columns: 1fr;
     gap:16px;
   }
 
-  /* ✅ “folha” agora fica mais elegante dentro do card */
+  /* ==============================
+     ✅ “FOLHA” PREMIUM (TELA)
+     - sem mudar impressão
+     ============================== */
   .folha{
     width: 100%;
     min-height: 297mm;
     margin:0;
-    background:#fff;
-    box-shadow: none;
+
+    /* ✅ visual premium */
+    background: linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.86));
+    border: 1px solid var(--paperBorder);
+    border-radius: 22px;
+
+    box-shadow:
+      0 22px 56px rgba(0,0,0,.20),
+      inset 0 1px 0 rgba(255,255,255,.70);
+
     box-sizing:border-box;
     padding:14mm 18mm;
     position:relative;
-    border-radius:18px;
     overflow:hidden;
   }
+
+  /* ✅ detalhe discreto na folha */
+  .folha::before{
+    content:"";
+    position:absolute;
+    inset:-1px;
+    background:
+      radial-gradient(circle at 16% 14%, rgba(0,224,156,.10), transparent 44%),
+      radial-gradient(circle at 90% 62%, rgba(14,77,125,.06), transparent 52%);
+    pointer-events:none;
+    z-index:0;
+  }
+
+  /* ✅ conteúdo acima do brilho */
+  .folha > *{ position:relative; z-index:1; }
 
   /* ✅ botão imprimir no fim do formulário */
   .actions-bottom{
@@ -156,46 +248,58 @@
     font-weight:900;
     cursor:pointer;
     border:none;
-    border-radius:14px;
+    border-radius:16px;
   }
   .btn-print{
-    max-width:420px;
-    background:#28a745;
-    color:#fff;
-    box-shadow: 0 10px 24px rgba(0,0,0,.22);
+    max-width:440px;
+    background: linear-gradient(90deg, #00e09c, #1376b8);
+    color:#06233f;
+    box-shadow: 0 18px 34px rgba(0,0,0,.22);
+    letter-spacing:.05em;
   }
+  .btn-print:hover{ filter: brightness(1.04); }
+  .btn-print:active{ transform: translateY(1px); }
 
-  /* ===== SEU FORMULÁRIO (INTACTO) ===== */
+  /* ==========================================
+     ✅ SEU FORMULÁRIO (INTACTO)
+     Só ajuste visual (tela)
+     ========================================== */
   .titulo-laudo{
     text-align:center;
-    font-weight:800;
-    font-size:12pt;
+    font-weight:900;
+    font-size:13pt;
     margin: 8px 0 14px;
     text-transform:uppercase;
     font-family:"Arial Narrow", Arial, sans-serif;
+    color:#05253f;
+    letter-spacing:.04em;
   }
 
+  /* ✅ painel do formulário mais premium */
   .painel{
-    background:var(--panel);
-    border: 2px solid #7aa4c7;
-    border-radius:10px;
-    padding:14px 14px 8px;
+    background: rgba(238,242,247,.74);
+    border: 1px solid rgba(6,35,63,.18);
+    border-radius:16px;
+    padding:16px 16px 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,.10);
   }
 
   .sec{
-    border-top: 2px solid #b5cbe0;
-    padding-top:10px;
-    margin-top:10px;
+    border-top: 1px solid rgba(6,35,63,.14);
+    padding-top:12px;
+    margin-top:12px;
   }
   .sec:first-child{ border-top:none; padding-top:0; margin-top:0; }
 
+  /* ✅ títulos verdes sólidos (pedido do escopo) */
   .sec-title{
-    color:var(--blue);
+    color: #00a651;
     font-weight:900;
-    font-size:10pt;
+    font-size:11pt;
     text-transform:uppercase;
     margin:0 0 8px;
     font-family:"Arial Narrow", Arial, sans-serif;
+    letter-spacing:.03em;
   }
 
   .linha{
@@ -206,12 +310,14 @@
     align-items:center;
     font-family:"Arial Narrow", Arial, sans-serif;
     font-size:11pt;
+    color:#05253f;
   }
 
   .lbl{
     font-weight:900;
     text-transform:uppercase;
     min-width:160px;
+    color:#05253f;
   }
 
   .op-row{
@@ -219,6 +325,8 @@
     gap:16px;
     flex-wrap:wrap;
   }
+
+  /* ✅ inputs mais alinhados e legíveis */
   .op-row label,
   .op-col label{
     display:flex;
@@ -226,6 +334,12 @@
     cursor:pointer;
     font-weight:400;
     align-items:flex-start;
+    color:#05253f;
+  }
+
+  input[type="radio"], input[type="checkbox"]{
+    transform: translateY(2px);
+    accent-color: #00a651; /* ✅ destaque */
   }
 
   .op-col{
@@ -242,29 +356,39 @@
     margin-top:6px;
   }
 
+  /* ✅ Observação premium */
   .obs-wrap{
     margin-top:12px;
-    background:#e9eff7;
-    border: 2px dashed #9cb6cf;
-    border-radius:14px;
+    background: rgba(233,239,247,.78);
+    border: 1px dashed rgba(6,35,63,.28);
+    border-radius:16px;
     padding:12px;
+    box-shadow: 0 12px 24px rgba(0,0,0,.08);
   }
   .obs-title{
     font-weight:900;
     font-family:"Arial Narrow", Arial, sans-serif;
     font-size:12pt;
     margin-bottom:8px;
+    color:#05253f;
   }
   #obs_texto_tela{
     width:100%;
     min-height:110px;
     resize:vertical;
-    padding:10px;
-    border-radius:12px;
-    border:1px solid #b6c7d8;
+    padding:12px;
+    border-radius:14px;
+    border:1px solid rgba(6,35,63,.18);
     font-family:"Arial Narrow", Arial, sans-serif;
     font-size:11pt;
     box-sizing:border-box;
+    outline:none;
+    background: rgba(255,255,255,.92);
+    color:#05253f;
+  }
+  #obs_texto_tela:focus{
+    border-color: rgba(0,166,81,.55);
+    box-shadow: 0 0 0 4px rgba(0,166,81,.14);
   }
 
   /* ===== PRINT (NÃO MEXE) ===== */
@@ -300,7 +424,7 @@
       font-family:"Arial Narrow", Arial, sans-serif;
     }
 
-    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; border-radius:0; }
+    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; border-radius:0; background:#fff; border:none; }
     @page{ size:A4; margin:0; }
   }
 
@@ -375,7 +499,6 @@
     font-size:11.5pt;
   }
 
-  /* ✅ ASSINATURA CENTRALIZADA NO PRINT */
   .assinatura-wrap{
     display:flex;
     justify-content:center;
@@ -394,21 +517,19 @@
 <div class="watermark" aria-hidden="true"></div>
 
 <div class="shell">
+  <!-- ✅ HEADER NOVO: SEM IMAGEM SESC -->
   <div class="hdr no-print">
     <div class="brand">
-      <img src="logo/sesctopo.png" alt="SESC" />
-      <div class="brand-info">
-        <strong>SI - SISTEMA DE INFORMAÇÃO</strong>
-        <span>Laudo • Digitação e Impressão</span>
-      </div>
+      <strong>LAUDO • DIGITAÇÃO</strong>
+      <span>SI — Sistema de Informação • Laudos</span>
     </div>
-    <div class="pill">Formulário do Laudo</div>
+    <div class="pill">Tela do Laudo</div>
   </div>
 
   <div class="card">
     <div class="card-h no-print">
       <h1>LAUDO DO EXAME CITOPATOLÓGICO</h1>
-      <div class="pill">Opções intactas • Sem alterações funcionais</div>
+      <div class="pill">Somente visual • Funções intactas</div>
     </div>
 
     <div class="card-b">
@@ -540,7 +661,7 @@
             <textarea id="obs_texto_tela" placeholder="Caso necessário, digite a observação aqui..."></textarea>
           </div>
 
-          <!-- ✅ BOTÃO IMPRIMIR AGORA NO FIM DO FORMULÁRIO -->
+          <!-- ✅ BOTÃO IMPRIMIR (INTACTO) -->
           <div class="actions-bottom">
             <button class="btn btn-print" onclick="imprimirLaudo()">IMPRIMIR / SALVAR PDF</button>
           </div>
@@ -548,7 +669,7 @@
         </div>
 
         <!-- =========================
-             ✅ PRINT
+             ✅ PRINT (INTACTO)
              ========================= -->
         <div class="print-only">
           <div class="print-bg">
@@ -619,7 +740,6 @@
               <span id="obs_print"></span>
             </div>
 
-            <!-- ✅ Rodapé com assinatura -->
             <div class="rodape-prof">
               <div id="rodape_data"></div>
 
@@ -691,7 +811,7 @@
     document.getElementById("cab_rua").textContent = init.rua;
     document.getElementById("cab_bairro").textContent = init.bairro;
     document.getElementById("cab_cidade").textContent = init.cidade;
-    document.getElementById("cab_cep").textContent = init.cep; /* ✅ corrigido */
+    document.getElementById("cab_cep").textContent = init.cep;
 
     document.getElementById("data_coleta_print").textContent = init.data_coleta;
     document.getElementById("nome_resp_print").textContent = init.responsavel;
@@ -766,7 +886,6 @@
     syncObservacao();
   }
 
-  /* ===== Exportação no padrão do sistema ===== */
   function mesChaveAtual(){
     const now = new Date();
     const yyyy = now.getFullYear();
@@ -826,7 +945,6 @@
     if(window.history.length > 1){ window.history.back(); return; }
   }
 
-  /* ✅ IMPRESSÃO DEFINITIVA: via IFRAME invisível */
   function imprimirLaudo(){
     atualizar();
     syncObservacao();
@@ -920,7 +1038,6 @@
     }, 650);
   }
 
-  // ✅ init
   preencherCabecalhoPrint();
 
   (function initObs(){
@@ -933,7 +1050,6 @@
     syncObservacao();
   })();
 
-  // ✅ GARANTIR QUE CTRL+P / MENU IMPRIMIR NUNCA SAIA EM BRANCO
   window.addEventListener("beforeprint", () => {
     try{
       atualizar();
