--- a/laudo.html
+++ b/laudo.html
@@ -27,11 +27,9 @@
 
     --r22:22px;
 
-    /* ✅ NOVO: verde “identidade” */
     --brandGreen:#00e09c;
     --brandGreen2:#73ff9a;
 
-    /* ✅ para “folha” premium */
     --paper: rgba(255,255,255,.92);
     --paperBorder: rgba(255,255,255,.26);
   }
@@ -48,7 +46,7 @@
     overflow-x:hidden;
   }
 
-  /* ✅ Marca d’água: mais visível e elegante (somente tela) */
+  /* ✅ Marca d’água (tela) */
   .watermark{
     position:fixed;
     top:70px;
@@ -57,14 +55,14 @@
     height:calc(100vh - 90px);
     background:url("logo/logotipo.png") no-repeat right center;
     background-size:contain;
-    opacity:.16; /* ✅ mais visível */
+    opacity:.16;
     pointer-events:none;
     z-index:0;
     filter: saturate(1.15) contrast(1.10) brightness(1.08);
     mix-blend-mode: screen;
   }
 
-  /* ✅ “brilho” discreto para dar depth */
+  /* ✅ brilho (tela) */
   body::after{
     content:"";
     position:fixed;
@@ -77,7 +75,6 @@
     z-index:0;
   }
 
-  /* ✅ Shell premium (parecido com o principal) */
   .shell{
     max-width:1180px;
     margin:0 auto;
@@ -85,9 +82,7 @@
     z-index:1;
   }
 
-  /* ==============================
-     ✅ HEADER NOVO (SEM sesctopo)
-     ============================== */
+  /* ✅ HEADER NOVO */
   .hdr{
     height:78px;
     padding:14px 20px;
@@ -137,7 +132,6 @@
     letter-spacing:.06em;
   }
 
-  /* ✅ pílula só com status (limpa o topo) */
   .pill{
     padding:9px 12px;border-radius:999px;
     border:1px solid rgba(255,255,255,.16);
@@ -149,9 +143,7 @@
     z-index:1;
   }
 
-  /* ==============================
-     ✅ CARD PRINCIPAL (GLASS)
-     ============================== */
+  /* ✅ CARD */
   .card{
     margin-top:14px;
     border-radius: var(--r22);
@@ -161,7 +153,6 @@
     overflow:hidden;
   }
 
-  /* ✅ Header interno: só título */
   .card-h{
     padding:14px 16px;
     display:flex;
@@ -197,16 +188,12 @@
     gap:16px;
   }
 
-  /* ==============================
-     ✅ “FOLHA” PREMIUM (TELA)
-     - sem mudar impressão
-     ============================== */
+  /* ✅ FOLHA (tela) */
   .folha{
     width: 100%;
     min-height: 297mm;
     margin:0;
 
-    /* ✅ visual premium */
     background: linear-gradient(180deg, rgba(255,255,255,.92), rgba(255,255,255,.86));
     border: 1px solid var(--paperBorder);
     border-radius: 22px;
@@ -221,7 +208,7 @@
     overflow:hidden;
   }
 
-  /* ✅ detalhe discreto na folha */
+  /* ✅ overlay premium (SÓ NA TELA) */
   .folha::before{
     content:"";
     position:absolute;
@@ -233,10 +220,8 @@
     z-index:0;
   }
 
-  /* ✅ conteúdo acima do brilho */
   .folha > *{ position:relative; z-index:1; }
 
-  /* ✅ botão imprimir no fim do formulário */
   .actions-bottom{
     margin-top:14px;
     display:flex;
@@ -260,10 +245,7 @@
   .btn-print:hover{ filter: brightness(1.04); }
   .btn-print:active{ transform: translateY(1px); }
 
-  /* ==========================================
-     ✅ SEU FORMULÁRIO (INTACTO)
-     Só ajuste visual (tela)
-     ========================================== */
+  /* ===== SEU FORMULÁRIO (INTACTO) ===== */
   .titulo-laudo{
     text-align:center;
     font-weight:900;
@@ -275,7 +257,6 @@
     letter-spacing:.04em;
   }
 
-  /* ✅ painel do formulário mais premium */
   .painel{
     background: rgba(238,242,247,.74);
     border: 1px solid rgba(6,35,63,.18);
@@ -291,7 +272,6 @@
   }
   .sec:first-child{ border-top:none; padding-top:0; margin-top:0; }
 
-  /* ✅ títulos verdes sólidos (pedido do escopo) */
   .sec-title{
     color: #00a651;
     font-weight:900;
@@ -325,8 +305,6 @@
     gap:16px;
     flex-wrap:wrap;
   }
-
-  /* ✅ inputs mais alinhados e legíveis */
   .op-row label,
   .op-col label{
     display:flex;
@@ -339,7 +317,7 @@
 
   input[type="radio"], input[type="checkbox"]{
     transform: translateY(2px);
-    accent-color: #00a651; /* ✅ destaque */
+    accent-color: #00a651;
   }
 
   .op-col{
@@ -356,7 +334,6 @@
     margin-top:6px;
   }
 
-  /* ✅ Observação premium */
   .obs-wrap{
     margin-top:12px;
     background: rgba(233,239,247,.78);
@@ -391,15 +368,25 @@
     box-shadow: 0 0 0 4px rgba(0,166,81,.14);
   }
 
-  /* ===== PRINT (NÃO MEXE) ===== */
+  /* ===== PRINT (NÃO MEXE NAS FUNÇÕES) ===== */
   .print-only{ display:none; }
 
   @media print{
     body{ background:#fff; padding:0; margin:0; }
-    .hdr, .card, .watermark{ display:none !important; }
+
+    /* ✅ garantir que NÃO vai capa/overlay no PDF */
+    body::after{ content:none !important; display:none !important; }
+    .watermark{ display:none !important; }
+    .hdr, .card{ display:none !important; }
 
     .no-print{ display:none !important; }
     .print-only{ display:block !important; }
+
+    /* ✅ remove overlay da folha na impressão */
+    .folha::before{
+      content:none !important;
+      display:none !important;
+    }
 
     .print-bg{
       position:fixed;
@@ -424,7 +411,16 @@
       font-family:"Arial Narrow", Arial, sans-serif;
     }
 
-    .folha{ box-shadow:none; width:auto; min-height:auto; padding:0; border-radius:0; background:#fff; border:none; }
+    .folha{
+      box-shadow:none !important;
+      width:auto !important;
+      min-height:auto !important;
+      padding:0 !important;
+      border-radius:0 !important;
+      background:#fff !important;
+      border:none !important;
+    }
+
     @page{ size:A4; margin:0; }
   }
 
@@ -517,7 +513,6 @@
 <div class="watermark" aria-hidden="true"></div>
 
 <div class="shell">
-  <!-- ✅ HEADER NOVO: SEM IMAGEM SESC -->
   <div class="hdr no-print">
     <div class="brand">
       <strong>LAUDO • DIGITAÇÃO</strong>
@@ -646,7 +641,6 @@
             </div>
           </div>
 
-          <!-- ✅ Observação na TELA -->
           <div class="obs-wrap">
             <div class="obs-title">Observação:</div>
 
@@ -661,16 +655,13 @@
             <textarea id="obs_texto_tela" placeholder="Caso necessário, digite a observação aqui..."></textarea>
           </div>
 
-          <!-- ✅ BOTÃO IMPRIMIR (INTACTO) -->
           <div class="actions-bottom">
             <button class="btn btn-print" onclick="imprimirLaudo()">IMPRIMIR / SALVAR PDF</button>
           </div>
 
         </div>
 
-        <!-- =========================
-             ✅ PRINT (INTACTO)
-             ========================= -->
+        <!-- ========================= PRINT ========================= -->
         <div class="print-only">
           <div class="print-bg">
             <img src="img/SESC_1.png" alt="Timbre">
@@ -765,7 +756,6 @@
     return (name||"").replace(/[\\/:*?"<>|]/g, "").replace(/\s+/g, " ").trim();
   }
 
-  /* ✅ Observação sincronizada */
   function syncObservacao(){
     const txt = (document.getElementById("obs_texto_tela")?.value || "").trim();
     const wrap = document.getElementById("obs_print_wrap");
@@ -826,7 +816,6 @@
   function atualizar(){
     const checksEpi = document.querySelectorAll('.epi:checked');
 
-    /* ✅ AUTO-ZONA */
     if(checksEpi.length >= 2){
       const zSim = document.getElementById("zona_sim");
       if(zSim && !zSim.checked) zSim.checked = true;
