--- a/laudo.html
+++ b/laudo.html
@@ -30,7 +30,6 @@
     --brandGreen:#00e09c;
     --brandGreen2:#73ff9a;
 
-    --paper: rgba(255,255,255,.92);
     --paperBorder: rgba(255,255,255,.26);
   }
 
@@ -82,7 +81,7 @@
     z-index:1;
   }
 
-  /* ✅ HEADER NOVO */
+  /* ✅ HEADER NOVO (TELA) */
   .hdr{
     height:78px;
     padding:14px 20px;
@@ -143,7 +142,7 @@
     z-index:1;
   }
 
-  /* ✅ CARD */
+  /* ✅ CARD (TELA) */
   .card{
     margin-top:14px;
     border-radius: var(--r22);
@@ -188,7 +187,7 @@
     gap:16px;
   }
 
-  /* ✅ FOLHA (tela) */
+  /* ✅ FOLHA (TELA) */
   .folha{
     width: 100%;
     min-height: 297mm;
@@ -368,13 +367,13 @@
     box-shadow: 0 0 0 4px rgba(0,166,81,.14);
   }
 
-  /* ===== PRINT (NÃO MEXE NAS FUNÇÕES) ===== */
+  /* ===== PRINT (INTACTO / PDF PERFEITO) ===== */
   .print-only{ display:none; }
 
   @media print{
     body{ background:#fff; padding:0; margin:0; }
 
-    /* ✅ garantir que NÃO vai capa/overlay no PDF */
+    /* ✅ remove QUALQUER efeito da tela no PDF */
     body::after{ content:none !important; display:none !important; }
     .watermark{ display:none !important; }
     .hdr, .card{ display:none !important; }
@@ -388,6 +387,7 @@
       display:none !important;
     }
 
+    /* ✅ AJUSTE DEFINITIVO DO TIMBRE DO PDF */
     .print-bg{
       position:fixed;
       inset:0;
@@ -400,6 +400,10 @@
       width:100%;
       height:100%;
       object-fit:cover;
+
+      /* ✅ O SEGREDO: timbre leve e profissional (sem "camada pesada") */
+      opacity: .26 !important;
+      filter: contrast(1.05) brightness(1.18) saturate(.95) !important;
     }
 
     .print-page{
